--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -77,24 +77,24 @@
         <h1 class="boardOneTitle">Categories</h1>
         <div class="ul">
             <ul>
-                <a th:href="@{/allRecipes(category= Soup )}">
-                <li><img alt="FirstDishes" class="FirstDishes" th:src="@{images/First dishes.svg}" src="../../static/images/First dishes.svg" >
+                <a th:href="@{/allRecipes(category=)}">
+                <li><img alt="First-Dish" class="First-Dish" th:src="@{images/First dish.svg}" src="../../static/images/First dish.svg" >
                     First dishes</li>
                 </a>
                 <hr>
-                <li><img alt="MainDishes" class="MainDishes" th:src="@{images/Main dishes.svg}" src="../../static/images/Main dishes.svg" >
+                <li><img alt="Main-Dish" class="MainDish" th:src="@{images/Main dish.svg}" src="../../static/images/Main dish.svg" >
                     Main dishes</li>
                 <hr>
-                <li><img alt="Salads" class="Salads" th:src="@{images/Salads.svg}" src="../../static/images/Salads.svg" >
+                <li><img alt="Salad" class="Salad" th:src="@{images/Salad.svg}" src="../../static/images/Salad.svg" >
                     Salads</li>
                 <hr>
                 <li><img alt="Pastry" class="Pastry" th:src="@{images/Pastry.svg}" src="../../static/images/Pastry.svg" >
                     Pastry</li>
                 <hr>
-                <li><img alt="Desserts" class="Desserts" th:src="@{images/Desserts.svg}" src="../../static/images/Dessert.svg" >
+                <li><img alt="Dessert" class="Dessert" th:src="@{images/Dessert.svg}" src="../../static/images/Dessert.svg" >
                     Desserts</li>
                 <hr>
-                <li><img alt="Drinks" class="Drinks" th:src="@{images/Drinks.svg}" src="../../static/images/Drinks.svg" >
+                <li><img alt="Drink" class="Drink" th:src="@{images/Drink.svg}" src="../../static/images/Drink.svg" >
                     Drinks</li>
                 <hr>
                 <li><img alt="Snacks" class="Snacks" th:src="@{images/Snacks.svg}" src="../../static/images/Snacks.svg" >
