--- a/src/main/resources/templates/user/test.html
+++ b/src/main/resources/templates/user/test.html
@@ -57,7 +57,7 @@
                         <img alt="substance" class="substance" th:src="@{https://i.imgur.com/zphkXzb.png}" src="https://i.imgur.com/zphkXzb.png">
                         First dishes
                     </li>
-                    <li><img alt="mDIcon" class="mDIcon" th:src="@{images/mainDish.svg}" src="../../static/images/mainDish.svg" >
+                    <li><img alt="mDIcon" class="mDIcon" th:src="@{images/mainDish.svg}" src="../../static/images/Main%20Dish.svg" >
                         Main dishes</li>
                     <li><img alt="salad" class="saladI" th:src="@{images/Salad.svg}" src="../../static/images/Salad.svg" >
                         Salads</li>
