renamed svg icons

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -261,17 +261,17 @@ ul hr {
     height: 4.1667vh;
 }
 
-.snackI{
+.Snack{
     width: 2.34375vw;/*45*/
     height: 2.7778vh;/*30*/
 }
 
-.fish{
+.Fish-Dish{
     width: 2.34375vw;
     height: 3.24075vh; /*35*/
 }
 
-.sauceI{
+.Sauce{
     width: 1.927084vw;
     height: 4.3518vh; /*37*/
 }
