--- a/src/main/resources/templates/user/test.html
+++ b/src/main/resources/templates/user/test.html
@@ -71,7 +71,7 @@
                         Snacks</li>
                     <li><img alt="fish" class="fish" th:src="@{images/Fish.svg}" src="../../static/images/Fish.svg" >
                         Fish dishes</li>
-                    <li><img alt="sauce" class="sauceI" th:src="@{images/SauceSelection.svg}" src="../../static/images/SauceSelection.svg" >
+                    <li><img alt="sauce" class="sauceI" th:src="@{images/SauceSelection.svg}" src="../../static/images/Sauce.svg" >
                         Sauces</li>
                 </ol>
             </li>
