--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -97,13 +97,13 @@
                 <li><img alt="Drink" class="Drink" th:src="@{images/Drink.svg}" src="../../static/images/Drink.svg" >
                     Drinks</li>
                 <hr>
-                <li><img alt="Snacks" class="Snacks" th:src="@{images/Snacks.svg}" src="../../static/images/Snacks.svg" >
+                <li><img alt="Snack" class="Snack" th:src="@{images/Snack.svg}" src="../../static/images/Snack.svg" >
                     Snacks</li>
                 <hr>
-                <li><img alt="FishDishes" class="FishDishes" th:src="@{images/Fish dishes.svg}" src="../../static/images/Fish dishes.svg" >
+                <li><img alt="Fish-Dish" class="FishDish" th:src="@{images/Fish dish.svg}" src="../../static/images/Fish dish.svg" >
                     Fish dishes</li>
                 <hr>
-                <li><img alt="Sauces" class="Sauces" th:src="@{images/Sauces.svg}" src="../../static/images/Sauces.svg" >
+                <li><img alt="Sauce" class="Sauce" th:src="@{images/Sauce.svg}" src="../../static/images/Sauce.svg" >
                     Sauces</li>
                 <hr>
             </ul>
@@ -115,21 +115,21 @@
         <div class="dessert">
             <img alt="cheesecake" class="cheesecake" th:src="@{images/dessert.jpg}" src="../../static/images/dessert.jpg" >
             <div class="rectangle rectangle-left-1">
-                <img alt="Desserts" class="Desserts" th:src="@{images/Desserts.svg}" src="../../static/images/Dessert.svg" >Desserts
+                <img alt="Dessert" class="Dessert" th:src="@{images/Dessert.svg}" src="../../static/images/Dessert.svg" >Desserts
             </div>
         </div>
 
         <div class="drink">
             <img alt="fresh" class="fresh" th:src="@{images/drink.jpg}"  src="../../static/images/drink.jpg" >
             <div class="rectangle rectangle-left-2">
-                <img alt="Drinks" class="Drinks" th:src="@{images/Drinks.svg}" src="../../static/images/Drinks.svg" >Drinks
+                <img alt="Drink" class="Drink" th:src="@{images/Drink.svg}" src="../../static/images/Drink.svg" >Drinks
             </div>
         </div>
 
         <div class="salad">
             <img alt="seafoodSalad" class="seafoodSalad" th:src="@{images/salad.jpg}" src="../../static/images/salad.jpg" >
             <div class="rectangle rectangle-left-3">
-                <img alt="Salads" class="Salads" th:src="@{images/Salads.svg}" src="../../static/images/Salads.svg" >Salads
+                <img alt="Salad" class="Salad" th:src="@{images/Salad.svg}" src="../../static/images/Salad.svg" >Salads
             </div>
         </div>
     </div>
@@ -137,14 +137,14 @@
     <div class="firstD">
         <img alt="firstDish" class="firstDish" th:src="@{images/firstD.jpg}" src="../../static/images/firstD.jpg">
         <div class="rectangleFD rectangleFD-left">
-            <img alt="FirstDishes" class="FirstDishes" th:src="@{images/First dishes.svg}" src="../../static/images/First dishes.svg" >First dishes
+            <img alt="First-Dish" class="First-Dish" th:src="@{images/First dish.svg}" src="../../static/images/First dish.svg" >First dishes
         </div>
     </div>
 
     <div class="mainD">
         <img alt="mainDish" class="mainDish" th:src="@{images/mainD.jpg}" src="../../static/images/Main dishes.jpg">
         <div class="rectangleMD rectangleMD-left">
-            <img alt="MainDishes" class="MainDishes" th:src="@{images/Main dishes.svg}" src="../../static/images/Main dishes.svg" >Main dishes
+            <img alt="Main-Dish" class="MainDish" th:src="@{images/Main dish.svg}" src="../../static/images/Main dish.svg" >Main dishes
         </div>
     </div>
 
