--- a/src/main/resources/static/css/allRecipes.css
+++ b/src/main/resources/static/css/allRecipes.css
@@ -100,6 +100,51 @@ body {
 a:visited, a:link {
     text-decoration: none;
 }
+
+.First-Dish{
+    width: 2.65625vw;
+    height:5.5556vh;
+}
+
+.Main-Dish{
+    width: 2.05vw;
+    height:2.7vh;
+}
+
+.Salad{
+    width: 2.0833vw;
+    height:4.167vh;
+}
+
+.pastryI{
+    width: 2.34375vw;
+    height: 3.24075vh;
+}
+
+.Dessert{
+    width: 2.34375vw;
+    height: 3.24075vh;
+}
+
+.Drink{
+    width: 2.34375vw;
+    height: 4.1667vh;
+}
+
+.Snack{
+    width: 2.34375vw;/*45*/
+    height: 2.7778vh;/*30*/
+}
+
+.Fish-Dish{
+    width: 2.34375vw;
+    height: 3.24075vh; /*35*/
+}
+
+.Sauce{
+    width: 1.927084vw;
+    height: 4.3518vh; /*37*/
+}
 /*____________________________________________________________________________________________________________________*/
 
 .container {
