--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -57,7 +57,7 @@
         <div id="overlay-user" onclick="hideOverlay()"></div>
         <div class="login-window" id="popup-login-window">
             <h1 class="login-heading">Log in</h1>
-            <form method="post"  id="loginForm"  th:action="@{api/auth/login}" onsubmit="return submitForm()">
+            <form method="post"  id="loginForm"  th:action="@{../api/auth/login}" onsubmit="return submitForm()">
                 <div class="login-form email">
                     <input name="username" placeholder="Enter email" type="text" required>
                 </div>
@@ -302,22 +302,22 @@
         var formData = new FormData(form);
         var data = {};
         formData.forEach(function(value, key){
-        data[key] = value;
-    });
+            data[key] = value;
+        });
         var xhr = new XMLHttpRequest();
         xhr.open('POST', form.action, true);
         xhr.setRequestHeader('Content-Type', 'application/json');
         xhr.onreadystatechange = function() {
-        if (xhr.readyState === XMLHttpRequest.DONE) {
-        if (xhr.status === 200) {
-            alert('Login successful. You are now logged in.');
-        } else {
-            alert('Login failed. Please try again.'); // Show an alert or handle error
-        }
-    }
-    };
+            if (xhr.readyState === XMLHttpRequest.DONE) {
+                if (xhr.status !== 200) {
+                    window.location.href = '/';
+                } else {
+                    alert('Login failed. Please try again.');
+                }
+            }
+        };
         xhr.send(JSON.stringify(data));
-        return false; // Prevent the form from submitting in the traditional way
+        return false;
     }
 
     document.getElementById("report-btn").addEventListener("click",
