--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -309,7 +309,7 @@
         xhr.setRequestHeader('Content-Type', 'application/json');
         xhr.onreadystatechange = function() {
             if (xhr.readyState === XMLHttpRequest.DONE) {
-                if (xhr.status !== 200) {
+                if (xhr.status === 200) {
                     window.location.href = '/';
                 } else {
                     alert('Login failed. Please try again.');
