--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -91,6 +91,13 @@
         <button class="create-list" id="create-new-list-btn">Create a new list</button>
         <button class="user-list">UserList</button>
         <button class="user-list1">Userlist</button>
+        <div class="list-container" id="list-field-popup-window">
+            <div class="list-name">
+                <form th:action="@{/api/newList}" method="post"></form>
+                <input type="text" placeholder="Enter list name" id="listName">
+            </div>
+            <button id="confirm-list-btn">Confirm</button>
+        </div>
     </div>
 
 
@@ -345,6 +352,14 @@
         () => showOverlay("overlay-lists", "lists-popup-window"));
     document.getElementById("overlay-lists").addEventListener("click",
         () => hideOverlay("overlay-lists", "lists-popup-window"));
+
+    function createNewList(button) {
+        if(button==='create-nes-list') {
+
+        }
+    }
+
+    // Event listener for moving buttons down
     document.getElementById("create-new-list-btn").addEventListener("click", function() {
         var windowHeight = window.innerHeight;
         var userButtons = document.querySelectorAll(".user-list, .user-list1");
@@ -353,8 +368,24 @@
             var currentTop = parseFloat(window.getComputedStyle(button).top);
             var currentTopVh = (currentTop / windowHeight) * 100;
 
-            button.style.top = (currentTopVh + 8) + "vh"; // Припустимо, що ви хочете змістити на 5vh
+            button.style.top = (currentTopVh + 8) + "vh";
         });
+    });
+
+    document.getElementById("create-new-list-btn").addEventListener("click", () => showOverlay("list-field-popup-window", "list-name"));
+
+    document.getElementById("confirm-list-btn").addEventListener("click", function() {
+        var windowHeight = window.innerHeight;
+        var userButtons = document.querySelectorAll(".user-list, .user-list1");
+
+        userButtons.forEach(function(button) {
+            var currentTop = parseFloat(window.getComputedStyle(button).top);
+            var currentTopVh = (currentTop / windowHeight) * 100;
+
+            button.style.top = (currentTopVh - 8) + "vh"; // Move up by 8vh
+        });
+
+        hideOverlay("list-field-popup-window", "confirm-list-btn");
     });
 
 
