--- a/src/main/resources/static/css/moderatorAIReports.css
+++ b/src/main/resources/static/css/moderatorAIReports.css
@@ -124,7 +124,7 @@ body {
     position: absolute;
     width: 91.6vw;
     height: 30vh;
-    background-color: #F2E3B3;
+    background-color: #FBEFC7;
     border-radius: 5vh;
     top: 4vh;
     right: 2.1vw;
@@ -136,6 +136,54 @@ body {
 }
 
 /*____________________________________________________________________________________________________________________*/
+.linkField {
+    position: absolute;
+    width: 91.6vw;
+    height: 8vh;
+}
+
+.notInBD {
+    position: absolute;
+    text-align: center;
+    font-family: 'Frank Ruhl Libre', serif;
+    font-size: 2vw;
+    text-decoration: none;
+    left: 2vw;
+    top: 1vh;
+}
+
+.InBD {
+    left: 27vw;
+}
+
+.informationField {
+    position: absolute;
+    width: 88vw;
+    height: 13vh;
+    background-color: #F2E3B3;
+    border-radius: 3vh;
+    top: 8vh;
+    left: 1.8vw;
+}
+
+#processing {
+    position: absolute;
+    width: 26vw;
+    height: 6vh;
+    background-color: #3E5902;
+    top: 14.5vh;
+    left: 31vw;
+    border-radius: 2vh;
+    text-align: center;
+    font-family: 'Frank Ruhl Libre', serif;
+    font-size: 2vw;
+    color: #F2E3B3;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 /*____________________________________________________________________________________________________________________*/
 .footer {
     position: fixed;
