--- a/src/main/resources/templates/moderator/moderatorAIReports.html
+++ b/src/main/resources/templates/moderator/moderatorAIReports.html
@@ -48,9 +48,23 @@
     <div class="reportField">
         <div class="linkField">
             <div class="notInBD">Request for recipe review:</div>
+            <!--TODO: А далі треба взяти категорії, назву та час приготування з бд -->
+            <div class=" notInBD InBD">Categories Title Time for cooking</div>
+            <div class="informationField">
+                <button id="processing">Take for processing</button>
+            </div>
         </div>
     </div>
-    <div class="reportField report2"></div>
+    <div class="reportField report2">
+        <div class="linkField">
+            <div class="notInBD">Request for recipe review:</div>
+            <!--TODO: А далі треба взяти категорії, назву та час приготування з бд -->
+            <div class=" notInBD InBD">Categories Title Time for cooking</div>
+            <div class="informationField">
+                <button id="processing">Take for processing</button>
+            </div>
+        </div>
+    </div>
 </div>
 <table th:each="report: ${reports}">
     <tr>
