added breaking for text in comments

--- a/src/main/resources/static/css/recipe.css
+++ b/src/main/resources/static/css/recipe.css
@@ -306,7 +306,7 @@ body {
     justify-content: center;
 }
 
-#publish:hover, #FavoriteList:hover, .UserList:hover, .Report:hover, .create-list:hover{
+#publish:hover, #FavoriteList:hover, .UserList:hover, .Report:hover, .create-list:hover, #confirm-list-btn:hover {
     background-color: #FBEFC7;
     border: 0.5vh solid #F28705;
 }
@@ -352,6 +352,8 @@ body {
 .comment{
     position: absolute;
     display: flex;
+    word-break: break-word;
+    white-space: normal;
     width: 42.9vw;
     height: 10vh;
     margin-left: 2.0834vw;
