--- a/src/main/resources/static/css/recipe.css
+++ b/src/main/resources/static/css/recipe.css
@@ -340,34 +340,44 @@ body {
     height: 3vh;
 }
 .comment-user-circle {
+    position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #F2F2EB;
     border-radius: 50%;
-    margin-left: 0.26vw;
-    margin-top: 0.46vh;
     width: 2.6vw;
     height: 4.6vh;
 }
-.comment{
-    position: absolute;
-    display: flex;
-    word-break: break-word;
-    white-space: normal;
+
+.comment-container {
+    display: grid;
     width: 42.9vw;
-    height: 10vh;
-    margin-left: 2.0834vw;
+    margin-left: 2vw;
     margin-top: 0.9259vh;
-    top: 1.85vh;
-    background-color:  #FBEFC7;
+    background-color: #FBEFC7;
     border-radius: 5vh;
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 1.5625vw;
 }
-.comment2{
-    top: 11.5vh;
+
+.comment {
+    width: 100%;
+    padding: 2vh;
+    box-sizing: border-box;
+    grid-row: 1;
 }
+
+.comment-text {
+    width: 42.9vw;;
+    overflow-wrap: break-word;
+    word-break: break-word;
+    white-space: normal;
+    padding: 1.5vh 1vw 1.5vh 3vw;
+    box-sizing: border-box;
+    grid-row: 1;
+}
+
 
 ::-webkit-scrollbar {
     width: 0.78125vw;
